with tx deduction

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "hono": "^4.6.20",
     "postgres": "^3.4.5",
+    "uuid": "^11.0.5",
     "viem": "^2.22.19",
     "zod": "^3.22.4"
   },
