--- a/wrangler.toml
+++ b/wrangler.toml
@@ -24,6 +24,6 @@ compatibility_flags = [ "nodejs_compat" ]
 # [ai]
 # binding = "AI"
 
-# [observability]
-# enabled = true
+[observability]
+enabled = true
 # head_sampling_rate = 1
